# yambo-tests

./: .gitignore  .gitignore.orig  .gitmodules  .running_robot.pl  KILL  PATH  README.md  base.in  configure  do.tcsh  driver.pl
ROBOTS/: EXAMPLE_crontab  node119
ROBOTS/Conors-MacBook-Pro.local/CONFIGURATION/: gfortran4.9_mpich.sh
ROBOTS/NewLaptop/sangalli/: BRANCHES
ROBOTS/OUT-OF-DATE/Conors-MacBook-Pro.local/: BRANCHES
ROBOTS/OUT-OF-DATE/etsfmi.fisica.unimi.it/: BRANCHES
ROBOTS/OUT-OF-DATE/node001.cecam.org/: BRANCHES
ROBOTS/OUT-OF-DATE/pl8.mi.infn.it/: BRANCHES
ROBOTS/OUT-OF-DATE/teal.qub.ac.uk/: BRANCHES
ROBOTS/VivoBook/sangalli/: BRANCHES  CRONTAB
ROBOTS/amore9.mlib.ism.cnr.it/marini/: BRANCHES  CRONTAB  TIME_ID  script.tcsh
ROBOTS/anomaly.mlib.ism.cnr.it/marini/: BRANCHES  CRONTAB  TIME_ID  script.tcsh  script_R1.tcsh  script_R2.tcsh
ROBOTS/attacc-lavoro/attacc/: BRANCHES
ROBOTS/attacc-portatile/attacc/: BRANCHES  MODULES
ROBOTS/bacalhau/sangalli/: BRANCHES
ROBOTS/baym-robot/marini/: BRANCHES  BRANCHES.orig  CRONTAB  MODULES
ROBOTS/baym.mlib.ism.cnr.it/marini/: BRANCHES  CRONTAB
ROBOTS/baym/marini/: BRANCHES  CRONTAB  MODULES
ROBOTS/castore.mlib.ism.cnr.it/marini/: BRANCHES  CRONTAB
ROBOTS/claudio-notebook/attacc/: BRANCHES
ROBOTS/corvina.fisica.unimo.it/ferretti/: BRANCHES  CRONTAB
ROBOTS/dafne/CONFIGURATION/: gfortran_debug.sh  ifort16_mpich_default.sh  ifort_debug.sh  ifort_default.sh
ROBOTS/doncamillo/ferretti/: script_gnu-ompi.sh
ROBOTS/doncamillo/marini/: BRANCHES  script.sh
ROBOTS/dufour.mlib.ism.cnr.it/: CRONTAB
ROBOTS/dufour.mlib.ism.cnr.it/marini/: BRANCHES  CRONTAB  MODULES
ROBOTS/endangered.dodo/fulvio.paleari/: BRANCHES
ROBOTS/etsfmi.fisica.unimi.it/CONFIGURATION/: gfortran.sh
ROBOTS/fen01.fermi.cineca.it/CONFIGURATION/: frontend_xlf_libs.sh
ROBOTS/fermi.cineca.it/CONFIGURATION/: xlf_debug.sh
ROBOTS/frontend/marini/: BRANCHES  CRONTAB  MODULES
ROBOTS/marini-Galago-UltraPro/marini/: BRANCHES
ROBOTS/narro/sangalli/: BRANCHES
ROBOTS/polluce.mlib.ism.cnr.it/marini/: BRANCHES  CRONTAB  TIME_ID  script.tcsh
ROBOTS/polluce.mlib.ism.cnr.it/sangalli/: BRANCHES
ROBOTS/potzie/ferretti/: BRANCHES  TIME_ID  script_pgi-ompi.sh
ROBOTS/potzie/marini/: BRANCHES  TIME_ID
ROBOTS/unimi-XPS-8930/sangalli/: BRANCHES
TESTS/BENCHMARKS/docs/: input.list  machine.list
TESTS/BENCHMARKS/results/: CHEVRON-poly.README
TESTS/MAIN/PA_chain/: INPUTS_devel-cutoff_4.3  REFERENCE_devel-cutoff_4.3
TESTS/MAIN/Silane/: CREDITS
TESTS/PERTURBO/Si_bulk/: download_databse.sh
THEMES/: test
benchmark-suite/: input.list  machine.list
benchmark-suite/pseudo/: 27_Co_OVwfc5.UPF  O.pz-mt.UPF
benchmark-suite/results/2016-03-20_AGNR_HYDRA/: README.txt
benchmark-suite/results/2016-05-31_dipoles_implementation/: COMMENTS.txt  README_scaling.txt  code_version2.txt
benchmark-suite/results/2016-06-01_AGNR_FERMI/: README_scaling.txt  yambo_gw1024.in  yambo_gw256.in  yambo_gw512.in
benchmark-suite/tests/AGNR/: yambo_gw.in
benchmark-suite/tests/chevron-poly/: nscf.in  scf.in  yambo_gw.in
config/: FTP_empty_credentials.pl  MODULES.pl  MODULES.pl.in  ROBOTS_list.pl  RULES.h  RULES.pl  RULES_ignore.pl  RULES_renaming.pl  SAMPLE_config.sh  TEMPLATE.php.in  TOOLS.pl  TOOLS.pl.in  WHITELIST.h  configure.ac
docs/: wget_from_google_drive.sh
find_the_diff/: make_the_makefile.sh  routines.F
libs/: CHECK_GPL_skip.pm  CHECK_database.pm  CHECK_driver.pm  CHECK_exist.pm  CHECK_file.pm  CHECK_ignore.pm  COMPILE_find_the_diff.pm  CPU_CONF.pm  CRON_driver.pm  FLOWS.pm  FTP_utils.pm  KILL_me.pm  MESSAGE.pm  MY_PRINT.pm  PARALLEL_build_the_conf.pm  PARALLEL_loop.pm  PARALLEL_random.pm  PHP_folders_rename.pm  PHP_generate.pm  PROFILE.pm  PROFILE_python.pm  RUN_PAR_constrains.pm  RUN_convert_the_SAVE.pm  RUN_driver.pm  RUN_executables.pm  RUN_get_runlevels.pm  RUN_global_report.pm  RUN_input_apply_renaming_rules.pm  RUN_input_file_test.pm  RUN_input_utils.pm  RUN_it.pm  RUN_load_LA_fields.pm  RUN_load_OPENMP_fields.pm  RUN_load_PAR_fields.pm  RUN_load_actions.pm  RUN_load_conf.pm  RUN_logs.pm  RUN_random_PAR.pm  RUN_restore_the_SAVE.pm  RUN_setup.pm  (+31 more)
libs_private/: NEW.credentials
profiling/: plot_data.py
scripts/: branch_continuous_testing.tcsh.in  continuous_testing.tcsh.in  devel_references_sync_with_gpl.sh  job_stopper.sh  job_stopper.tcsh  killer.tcsh  launch_the_robot.sh.in  launcher.tcsh.in  modules_manager.sh  multiple_robots_manager.sh  reset.sh  reset.sh.in  robot_update.awk.in  run_the_continous_testing.sh  run_the_continous_testing.sh.in  test-suite-launcher.tcsh  test-suite-launcher.tcsh.in  test_all_modules.sh  update_libs.sh  wget_from_google_drive.sh
scripts/find_the_diff/: RULES.F  check.F  data.F  find_the_diff.F  module.F  ndb2o.awk  routines.F
scripts/profiling/: profiling_report.py
scripts/python/: config.json  config.yaml  download_tests.py  misc.py  parameters.json  pytest_yambo.py
test-suite/: configure  driver.pl
test-suite/ROBOTS/: EXAMPLE_crontab
test-suite/THEMES/: G_parallelization  validation
test-suite/config/: MODULES.pl.in  RULES.h  TOOLS.pl.in  WHITELIST.h  configure.ac
test-suite/docs/: README.howto
test-suite/find_the_diff/: RULES.F  check.F  find_the_diff.F  make_the_makefile.sh  module.F
test-suite/libs/: CHECK_GPL_skip.pm  CHECK_database.pm  CHECK_driver.pm  CHECK_file.pm  COMPILE_find_the_diff.pm  FLOWS.pm  FTP_utils.pm  MY_PRINT.pm  RUN_PAR_constrains.pm  RUN_convert_the_SAVE.pm  RUN_driver.pm  RUN_executables.pm  RUN_get_runlevels.pm  RUN_global_report.pm  RUN_input_file_test.pm  RUN_input_utils.pm  RUN_it.pm  RUN_load_PAR_fields.pm  RUN_load_actions.pm  RUN_load_conf.pm  RUN_logs.pm  RUN_random_PAR.pm  RUN_restore_the_SAVE.pm  RUN_setup.pm  RUN_skip_the_test.pm  RUN_stats.pm  RUN_user_flags.pm  SETUP.pm  SETUP_branch.pm  SETUP_build.pm  SETUP_configuration.pm  SETUP_defaults.pm  SETUP_keys.pm  UTILS.pm  UTILS_backup.pm  UTILS_clean.pm  UTILS_commit.pm  UTILS_download.pm  UTILS_failed_theme_creator.pm  UTILS_input_tests.pm  (+7 more)
test-tov/: HOW_TO.txt
test-tov/H2/: H2_nist.link
(+17617 files in other folders)
